@@ -33,6 +33,7 @@ Grant McLean		 grant at mclean dot net dot nz
 Philipp Rumpf		 prumpf at gmail dot com
 Kevin Ryde		 user42 zip com au
 Emmanuel Rodriguez       emmanuel rodriguez gmail com
+Chris Sincock		 csincock gmail com
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk+ source code, so credit goes to those guys
